закончил десктоп, начал адаптацию

--- a/app/index.html
+++ b/app/index.html
@@ -181,7 +181,7 @@
         <h2 class="accent-item__title title">
           Станьте владельцем
           уникальной платформы
-          <span class="accent-text">
+          <span class="accent-text accent-item__span">
             Stark для торговли на Forex
           </span>
         </h2>
@@ -642,7 +642,7 @@
 
       <section class="owner">
         <h2 class="owner__title title">
-          Как стать владельцем платформы Stark
+          <span class="accent-text">Как стать владельцем платформы Stark</span> <br>
           и начать зарабатывать?
         </h2>
         <ol class="owner__list">
@@ -651,7 +651,7 @@
               Заявка
             </div>
             <div class="owner__item-img">
-              <img src="" alt="">
+              <img src="images/owner/1.png" alt="">
             </div>
             <p class="owner__item-text">
               Оставьте заявку на сайте, позвоните нам по номеру указать или напишите
@@ -664,7 +664,7 @@
               Консультация
             </div>
             <div class="owner__item-img">
-              <img src="" alt="">
+              <img src="images/owner/2.png" alt="">
             </div>
             <p class="owner__item-text">
               В ближайшее время с вами свяжется наш менеджер, проконсультирует по
@@ -676,7 +676,7 @@
               Оплата
             </div>
             <div class="owner__item-img">
-              <img src="" alt="">
+              <img src="images/owner/3.png" alt="">
             </div>
             <p class="owner__item-text">
               Оплатите стоимость платформы Stark любым удобным вам способом – с помощью
@@ -688,7 +688,7 @@
               Получение доступа
             </div>
             <div class="owner__item-img">
-              <img src="" alt="">
+              <img src="images/owner/4.png" alt="">
             </div>
             <p class="owner__item-text">
               Вы получаете доступ к платформе удобным для вас способом – на электронную почту
@@ -702,7 +702,7 @@
               программы
             </div>
             <div class="owner__item-img">
-              <img src="" alt="">
+              <img src="images/owner/5.png" alt="">
             </div>
             <p class="owner__item-text">
               Наши специалисты
@@ -717,7 +717,7 @@
               от техподдержки
             </div>
             <div class="owner__item-img">
-              <img src="" alt="">
+              <img src="images/owner/6.svg" alt="">
             </div>
             <p class="owner__item-text">
               В случае ошибок в работе программы, обратитесь
@@ -731,7 +731,7 @@
               платформы
             </div>
             <div class="owner__item-img">
-              <img src="" alt="">
+              <img src="images/owner/7.png" alt="">
             </div>
             <p class="owner__item-text">
               Ваши клиенты начнут проводить сделки на платформе. Вы можете расширять
@@ -744,7 +744,7 @@
               прибыли
             </div>
             <div class="owner__item-img">
-              <img src="" alt="">
+              <img src="images/owner/8.png" alt="">
             </div>
             <p class="owner__item-text">
               С каждой сделки вы будете получать комиссионные проценты, независимо от ее
@@ -756,15 +756,75 @@
 
       <section class="faq">
         <h2 class="faq__title title">Вопросы – ответы</h2>
-        <div class="accardion-item">
-          <div class="accardion-item__num">01</div>
-          <div class="accardion-item__question">
-            Как мои клиенты смогут следить за несколькими графиками одновременно?
-          </div>
-          <div class="accardion-item__answer">
-            answer
-          </div>
-        </div>
+        <ol class="faq__list">
+          <li class="faq__list-item">
+            <div class="faq__item-trigger">
+              Как мои клиенты смогут следить за несколькими графиками одновременно?
+            </div>
+            <div class="faq__item-content">
+              В интерфейсе программы можно выбрать количество графиков, которые будут одновременно отображаться в одном
+              окне – их
+              может быть 1, 2, 3, 4, 6 или 9. Это уникальная функция, недоступная ни в одной из аналогичных программ.
+              Раньше
+              пользователям приходилось переходить между разными окнами, использовать очень широкий дисплей или 2 – 3
+              монитора, что
+              неудобно во время проведения торгов.
+            </div>
+          </li>
+          <li class="faq__list-item">
+            <div class="faq__item-trigger">
+              Чем обусловлена низкая стоимость платформы Stark?
+            </div>
+            <div class="faq__item-content">
+              Программа Stark – это инновационная разработка и у вас сейчас есть возможность приобрести ее по «входной
+              цене» – всего
+              18 000 $. В ближайшем будущем с ростом популярности программы ее стоимость будет расти. Покупка
+              аналогичной платформы у
+              конкурентов будет стоить в среднем в 38 000 $.
+            </div>
+          </li>
+          <li class="faq__list-item">
+            <div class="faq__item-trigger">
+              Какие системные требования необходимы для установки программы на мое
+              устройство?
+            </div>
+            <div class="faq__item-content">
+              Указать системные требования
+            </div>
+          </li>
+          <li class="faq__list-item">
+            <div class="faq__item-trigger">
+              Смогу ли я зарабатывать, размещая рекламу на платформе?
+            </div>
+            <div class="faq__item-content">
+              Стандартный вариант программы не предусматривает размещение рекламы, чтобы не отвлекать пользователей во
+              время торгов.
+              Но при вашем желании мы сможем добавить эту функцию.
+            </div>
+          </li>
+          <li class="faq__list-item">
+            <div class="faq__item-trigger">
+              Как я смогу привлечь клиентов на платформу Stark?
+            </div>
+            <div class="faq__item-content">
+              На платформу вы сможете добавить собственную клиентскую базу. Также мы за дополнительную плату
+              предоставляем
+              консультацию или поможем купить готовую базу клиентов.
+            </div>
+          </li>
+          <li class="faq__list-item">
+            <div class="faq__item-trigger">
+              Как получить помощь при возникновении проблем в работе платформы?
+            </div>
+            <div class="faq__item-content">
+              В случае, если у вас возникнут сложности при работе с платформой или вы захотите добавить новые функции,
+              обратитесь в
+              круглосуточную службу технической поддержки. Для этого позвоните по номеру +7 (999) 140-29-29, напишите на
+              почту
+              support.starktrade.org или в мессенджере Telegram.
+            </div>
+          </li>
+        </ol>
       </section>
 
       <div class="accent-item">
@@ -781,12 +841,27 @@
       </div>
 
     </div>
+
+    <div class="popup">
+      <div class="popup_container">
+        <div class="popup_close">+</div>
+        <div class="popup_title">Оставьте Ваш номер телефона и мы с вами свяжемся</div>
+        <form class="send_mail_form" data-remote="true">
+          <input type="hidden" name="project_name" value="greencard">
+          <input type="hidden" name="admin_email" value="manager@green.cards">
+          <input type="hidden" name="form_subject" value="single_form">
+          <input class="popup_phone" type="text" name="Телефон" placeholder="Ваш номер телефона" required>
+          <button class="popup_button btn">Отправить</button>
+        </form>
+      </div>
+    </div>
+
   </main>
 
   <footer class="footer">
     <div class="container">
-      <h2 class="footer__title">У вас остались вопросы?</h2>
-      <div class="footer__subtitle">Задайте их любым удобным вам способом</div>
+      <h2 class="footer__title title">У вас остались вопросы?</h2>
+      <div class="footer__subtitle subtitle">Задайте их любым удобным вам способом</div>
       <ul class="footer__list">
         <li class="footer__list-item">
           <div class="footer__item-title">Звоните нам:</div>
@@ -806,5 +881,6 @@
   </footer>
 
 </body>
+<script src="js/main.min.js"></script>
 
 </html>
