--- a/app/index.html
+++ b/app/index.html
@@ -11,42 +11,48 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="header-top">
-        <div class="header-top__logo">
-          <img src="images/logo.svg" alt="stark - логотип">
+      <div class="header__wrapper">
+        <div class="header-top">
+          <div class="header-top__logo">
+            <img src="images/logo.svg" alt="stark - логотип">
+          </div>
+          <div class="header-top__email">
+            <a href="mailto:office@starktrade.org">office@starktrade.org</a>
+          </div>
+          <div class="header-top__call-wrapper">
+            <a class="header-top__phone" href="tel:79991402929">+7 (999) 140-29-29</a>
+            <div class="header-top__btn btn">Заказать звонок</div>
+          </div>
+          <div class="btn-burger">
+            <span></span>
+          </div>
         </div>
-        <div class="header-top__email">
-          <a href="mailto:office@starktrade.org">office@starktrade.org</a>
+
+        <div class="header-bottom">
+          <ul class="header-bottom__list">
+            <li class="header-bottom__list-item">
+              <a class="header-bottom__list-link" href="#">Главная</a>
+            </li>
+            <li class="header-bottom__list-item">
+              <a class="header-bottom__list-link" href="#"> Преимущества</a>
+            </li>
+            <li class="header-bottom__list-item">
+              <a class="header-bottom__list-link" href="#"> Интерфейс </a>
+            </li>
+            <li class="header-bottom__list-item">
+              <a class="header-bottom__list-link" href="#">О разработчиках </a>
+            </li>
+            <li class="header-bottom__list-item">
+              <a class="header-bottom__list-link" href="#">Функции </a>
+            </li>
+            <li class="header-bottom__list-item">
+              <a class="header-bottom__list-link" href="#">Как купить?</a>
+            </li>
+            <li class="header-bottom__list-item">
+              <a class="header-bottom__list-link" href="#">FAQ</a>
+            </li>
+          </ul>
         </div>
-        <div class="header-top__call-wrapper">
-          <a class="header-top__phone" href="tel:79991402929">+7 (999) 140-29-29</a>
-          <div class="header-top__btn btn">Заказать звонок</div>
-        </div>
-      </div>
-      <div class="header-bottom">
-        <ul class="header-bottom__list">
-          <li class="header-bottom__list-item">
-            <a class="header-bottom__list-link" href="#">Главная</a>
-          </li>
-          <li class="header-bottom__list-item">
-            <a class="header-bottom__list-link" href="#"> Преимущества</a>
-          </li>
-          <li class="header-bottom__list-item">
-            <a class="header-bottom__list-link" href="#"> Интерфейс </a>
-          </li>
-          <li class="header-bottom__list-item">
-            <a class="header-bottom__list-link" href="#">О разработчиках </a>
-          </li>
-          <li class="header-bottom__list-item">
-            <a class="header-bottom__list-link" href="#">Функции </a>
-          </li>
-          <li class="header-bottom__list-item">
-            <a class="header-bottom__list-link" href="#">Как купить?</a>
-          </li>
-          <li class="header-bottom__list-item">
-            <a class="header-bottom__list-link" href="#">FAQ</a>
-          </li>
-        </ul>
       </div>
     </div>
   </header>
@@ -99,7 +105,7 @@
         </div>
       </section>
 
-      <section class="why-buy">
+      <!-- <section class="why-buy">
         <h2 class="why-buy__title title">
           <span class="accent-text">Почему стоит купить</span> платформу Stark
           для торговли на Forex?
@@ -838,7 +844,7 @@
           и зарабатывайте на каждой проведенной через нее сделке
         </div>
         <div class="accent-item__btn btn">Оставить заявку на покупку</div>
-      </div>
+      </div> -->
 
     </div>
 
@@ -858,7 +864,7 @@
 
   </main>
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container">
       <h2 class="footer__title title">У вас остались вопросы?</h2>
       <div class="footer__subtitle subtitle">Задайте их любым удобным вам способом</div>
@@ -878,7 +884,7 @@
         </li>
       </ul>
     </div>
-  </footer>
+  </footer> -->
 
 </body>
 <script src="js/main.min.js"></script>
