--- a/app/index.html
+++ b/app/index.html
@@ -31,25 +31,25 @@
         <div class="header-bottom">
           <ul class="header-bottom__list">
             <li class="header-bottom__list-item">
-              <a class="header-bottom__list-link" href="#">Главная</a>
+              <a class="header-bottom__list-link" href="#main-screen">Главная</a>
             </li>
             <li class="header-bottom__list-item">
-              <a class="header-bottom__list-link" href="#"> Преимущества</a>
+              <a class="header-bottom__list-link" href="#advantages"> Преимущества</a>
             </li>
             <li class="header-bottom__list-item">
-              <a class="header-bottom__list-link" href="#"> Интерфейс </a>
+              <a class="header-bottom__list-link" href="#interface"> Интерфейс </a>
             </li>
             <li class="header-bottom__list-item">
-              <a class="header-bottom__list-link" href="#">О разработчиках </a>
+              <a class="header-bottom__list-link" href="#developers">О разработчиках </a>
             </li>
             <li class="header-bottom__list-item">
-              <a class="header-bottom__list-link" href="#">Функции </a>
+              <a class="header-bottom__list-link" href="#function">Функции </a>
             </li>
             <li class="header-bottom__list-item">
-              <a class="header-bottom__list-link" href="#">Как купить?</a>
+              <a class="header-bottom__list-link" href="#owner">Как купить?</a>
             </li>
             <li class="header-bottom__list-item">
-              <a class="header-bottom__list-link" href="#">FAQ</a>
+              <a class="header-bottom__list-link" href="#faq">FAQ</a>
             </li>
           </ul>
         </div>
@@ -59,7 +59,7 @@
 
   <main class="main">
     <div class="container">
-      <section class="main-screen">
+      <section class="main-screen" id="main-screen">
         <div class="main-screen__offer">
           <h1 class="main-screen__title title">
             Продажа уникальной платформы <span>Stark</span>
@@ -105,7 +105,7 @@
         </div>
       </section>
 
-      <!-- <section class="why-buy">
+      <section class="why-buy" id="why-buy">
         <h2 class="why-buy__title title">
           <span class="accent-text">Почему стоит купить</span> платформу Stark
           для торговли на Forex?
@@ -199,7 +199,7 @@
         <div class="accent-item__btn btn">Оставить заявку на покупку</div>
       </div>
 
-      <section class="advantages">
+      <section class="advantages" id="advantages">
         <h2 class="advantages__title title">
           Преимущества <br>
           <span class="accent-text">платформы Stark</span>
@@ -271,7 +271,7 @@
         </ul>
       </section>
 
-      <section class="interface">
+      <section class="interface" id="interface">
         <h2 class="interface__title title">
           <span class="accent-text">Посмотрите, как выглядит интерфейс</span> платформы
           глазами пользователей
@@ -299,7 +299,7 @@
         <div class="accent-item__btn btn">Оставить заявку на покупку</div>
       </div>
 
-      <section class="make-money">
+      <section class="make-money" id="make-money">
         <h2 class="make-money__title title">
           <span class="accent-text">Как вы сможете зарабатывать</span> с помощью платформы Stark?
         </h2>
@@ -313,23 +313,27 @@
               <div class="card-item__box-img">
                 <img src="images/icons/people-icon.svg" alt="иконка людей">
               </div>
-              <div class="card-item__title">Привлекайте клиентов</div>
-              <p class="card-item__text">
-                Предлагайте своим клиентам участвовать в торгах с
-                помощью платформы. За доп. плату мы поможем вам
-                с приобретением клиентской базы.
-              </p>
+              <div class="card-item__content-wrapper">
+                <div class="card-item__title">Привлекайте клиентов</div>
+                <p class="card-item__text">
+                  Предлагайте своим клиентам участвовать в торгах с
+                  помощью платформы. За доп. плату мы поможем вам
+                  с приобретением клиентской базы.
+                </p>
+              </div>
             </div>
             <div class="card-item">
               <div class="card-item__box-img">
                 <img src="images/icons/wallet-icon.svg" alt="иконка кошелька">
               </div>
-              <div class="card-item__title">Получайте комиссионные</div>
-              <p class="card-item__text">
-                Зарабатывайте на всех фьючерсных и
-                финансовых операциях пользователей
-                независимо от исхода сделки.
-              </p>
+              <div class="card-item__content-wrapper">
+                <div class="card-item__title">Получайте комиссионные</div>
+                <p class="card-item__text">
+                  Зарабатывайте на всех фьючерсных и
+                  финансовых операциях пользователей
+                  независимо от исхода сделки.
+                </p>
+              </div>
             </div>
           </div>
           <div class="make-money__inner-img">
@@ -344,24 +348,28 @@
               <div class="card-item__box-img">
                 <img src="images/icons/add-group.svg" alt="">
               </div>
-              <div class="card-item__title">Наберите группу трейдеров</div>
-              <p class="card-item__text">
-                Сформируйте группу участников
-                с высокими
-                инвестициями и заключайте сделки на платформе,
-                используя сигналы опытных игроков рынка.
-              </p>
+              <div class="card-item__content-wrapper">
+                <div class="card-item__title">Наберите группу трейдеров</div>
+                <p class="card-item__text">
+                  Сформируйте группу участников
+                  с высокими
+                  инвестициями и заключайте сделки на платформе,
+                  используя сигналы опытных игроков рынка.
+                </p>
+              </div>
             </div>
             <div class="card-item">
               <div class="card-item__box-img">
                 <img src="images/icons/percentage.svg" alt="">
               </div>
-              <div class="card-item__title">Получайте % со сделок</div>
-              <p class="card-item__text">
-                Клиенты будут выплачивать вам процент от всех
-                проведенных операций. Размер комиссионных
-                вы устанавливаете самостоятельно.
-              </p>
+              <div class="card-item__content-wrapper">
+                <div class="card-item__title">Получайте % со сделок</div>
+                <p class="card-item__text">
+                  Клиенты будут выплачивать вам процент от всех
+                  проведенных операций. Размер комиссионных
+                  вы устанавливаете самостоятельно.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -374,7 +382,7 @@
         </div>
       </section>
 
-      <section class="result">
+      <section class="result" id="result">
         <h2 class="result__title title">
           <span class="accent-text">Что получат ваши <br> клиенты
             в результате</span> использования нашей платформы?
@@ -467,7 +475,7 @@
         <div class="accent-item__btn btn">Оставить заявку на покупку</div>
       </div>
 
-      <section class="developers">
+      <section class="developers" id="developers">
         <div class="developers__inner">
           <img class="developers__img" src="images/developer-photo.png" alt="">
           <div class="developers__inner-description">
@@ -516,7 +524,7 @@
         </div>
       </section>
 
-      <section class="function">
+      <section class="function" id="function">
         <h2 class="function__title title">
           <span class="accent-text">Какие функции</span> <br>
           для пользователей <br>
@@ -646,7 +654,7 @@
         <div class="accent-item__btn btn">Оставить заявку на покупку</div>
       </div>
 
-      <section class="owner">
+      <section class="owner" id="owner">
         <h2 class="owner__title title">
           <span class="accent-text">Как стать владельцем платформы Stark</span> <br>
           и начать зарабатывать?
@@ -760,7 +768,7 @@
         </ol>
       </section>
 
-      <section class="faq">
+      <section class="faq" id="faq">
         <h2 class="faq__title title">Вопросы – ответы</h2>
         <ol class="faq__list">
           <li class="faq__list-item">
@@ -844,7 +852,7 @@
           и зарабатывайте на каждой проведенной через нее сделке
         </div>
         <div class="accent-item__btn btn">Оставить заявку на покупку</div>
-      </div> -->
+      </div>
 
     </div>
 
@@ -853,8 +861,8 @@
         <div class="popup_close">+</div>
         <div class="popup_title">Оставьте Ваш номер телефона и мы с вами свяжемся</div>
         <form class="send_mail_form" data-remote="true">
-          <input type="hidden" name="project_name" value="greencard">
-          <input type="hidden" name="admin_email" value="manager@green.cards">
+          <input type="hidden" name="project_name" value="stark">
+          <input type="hidden" name="admin_email" value="office@starktrade.org">
           <input type="hidden" name="form_subject" value="single_form">
           <input class="popup_phone" type="text" name="Телефон" placeholder="Ваш номер телефона" required>
           <button class="popup_button btn">Отправить</button>
@@ -864,7 +872,7 @@
 
   </main>
 
-  <!-- <footer class="footer">
+  <footer class="footer" id="footer">
     <div class="container">
       <h2 class="footer__title title">У вас остались вопросы?</h2>
       <div class="footer__subtitle subtitle">Задайте их любым удобным вам способом</div>
@@ -884,7 +892,7 @@
         </li>
       </ul>
     </div>
-  </footer> -->
+  </footer>
 
 </body>
 <script src="js/main.min.js"></script>
