конец, нужна оптимизация

--- a/app/index.html
+++ b/app/index.html
@@ -862,7 +862,7 @@
         <div class="popup_title">Оставьте Ваш номер телефона и мы с вами свяжемся</div>
         <form class="send_mail_form" data-remote="true">
           <input type="hidden" name="project_name" value="stark">
-          <input type="hidden" name="admin_email" value="office@starktrade.org">
+          <input type="hidden" name="admin_email" value="deikincoin@gmail.com">
           <input type="hidden" name="form_subject" value="single_form">
           <input class="popup_phone" type="text" name="Телефон" placeholder="Ваш номер телефона" required>
           <button class="popup_button btn">Отправить</button>
