--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
               <a class="header-bottom__list-link" href="#main-screen">Главная</a>
             </li>
             <li class="header-bottom__list-item">
-              <a class="header-bottom__list-link" href="#advantages"> Преимущества</a>
+              <a class="header-bottom__list-link" href="#benefits"> Преимущества</a>
             </li>
             <li class="header-bottom__list-item">
               <a class="header-bottom__list-link" href="#interface"> Интерфейс </a>
@@ -220,16 +220,16 @@
 
     </div>
 
-    <section class="advantages" id="advantages">
+    <section class="benefits" id="benefits">
       <div class="container">
-        <h2 class="advantages__title title">
+        <h2 class="benefits__title title">
           Преимущества <br>
           <span class="accent-text">платформы Stark</span>
         </h2>
         <ul class="list">
-          <li class="list__item advantages__item">
-            <div class="list__item-img advantages__item-img">
-              <img src="images/advantages/1.webp" alt="image">
+          <li class="list__item benefits__item">
+            <div class="list__item-img benefits__item-img">
+              <img src="images/benefits/1.webp" alt="image">
             </div>
             <h4 class="list__item-title">
               Не имеет аналогов
@@ -239,9 +239,9 @@
               можете стать первым, кто начнет на ней зарабатывать
             </p>
           </li>
-          <li class="list__item advantages__item">
-            <div class="list__item-img advantages__item-img">
-              <img src="images/advantages/2.webp" alt="image">
+          <li class="list__item benefits__item">
+            <div class="list__item-img benefits__item-img">
+              <img src="images/benefits/2.webp" alt="image">
             </div>
             <h4 class="list__item-title">
               Регулярные обновления
@@ -251,9 +251,9 @@
               обновлениям программного обеспечения и дизайна
             </p>
           </li>
-          <li class="list__item advantages__item">
-            <div class="list__item-img advantages__item-img">
-              <img src="images/advantages/3.webp" alt="image">
+          <li class="list__item benefits__item">
+            <div class="list__item-img benefits__item-img">
+              <img src="images/benefits/3.webp" alt="image">
             </div>
             <h4 class="list__item-title">
               Удобный интерфейс
@@ -264,8 +264,8 @@
               в оптимальных цветовых решениях
             </p>
           </li>
-          <li class="list__item advantages__item">
-            <div class="advantages__item-img--wrapper"></div>
+          <li class="list__item benefits__item">
+            <div class="benefits__item-img--wrapper"></div>
             <h4 class="list__item-title">
               Индивидуальные настройки
             </h4>
@@ -275,9 +275,9 @@
               и другие параметры
             </p>
           </li>
-          <li class="list__item advantages__item">
-            <div class="list__item-img advantages__item-img">
-              <img src="images/advantages/5.webp" alt="image">
+          <li class="list__item benefits__item">
+            <div class="list__item-img benefits__item-img">
+              <img src="images/benefits/5.webp" alt="image">
             </div>
             <h4 class="list__item-title">
               Интеграция с другим ПО
@@ -288,9 +288,9 @@
               отображению графиков
             </p>
           </li>
-          <li class="list__item advantages__item">
-            <div class="list__item-img advantages__item-img">
-              <img src="images/advantages/6.webp" alt="image">
+          <li class="list__item benefits__item">
+            <div class="list__item-img benefits__item-img">
+              <img src="images/benefits/6.webp" alt="image">
             </div>
             <h4 class="list__item-title">
               Отсутствие рекламы
