--- a/app/index.html
+++ b/app/index.html
@@ -325,7 +325,7 @@
           </span> софта Stark
         </h2>
         <div class="accent-item__subtitle">
-          с возможностью индивидуальных
+          С возможностью индивидуальных
           настроек под клиента
         </div>
         <p class="accent-item__text">
@@ -348,30 +348,30 @@
               пользователей платформы
             </h4>
             <div class="card-item">
-              <div class="card-item__box-img">
-                <img src="images/icons/people-icon.svg" alt="иконка людей">
-              </div>
               <div class="card-item__content-wrapper">
+                <div class="card-item__box-img">
+                  <img src="images/icons/people-icon.svg" alt="иконка людей">
+                </div>
                 <div class="card-item__title">Привлекайте клиентов</div>
-                <p class="card-item__text">
-                  Предлагайте своим клиентам участвовать в торгах с
-                  помощью платформы. За доп. плату мы поможем вам
-                  с приобретением клиентской базы.
-                </p>
               </div>
+              <p class="card-item__text">
+                Предлагайте своим клиентам участвовать в торгах с
+                помощью платформы. За доп. плату мы поможем вам
+                с приобретением клиентской базы.
+              </p>
             </div>
             <div class="card-item">
-              <div class="card-item__box-img">
-                <img src="images/icons/wallet-icon.svg" alt="иконка кошелька">
-              </div>
               <div class="card-item__content-wrapper">
+                <div class="card-item__box-img">
+                  <img src="images/icons/wallet-icon.svg" alt="иконка кошелька">
+                </div>
                 <div class="card-item__title">Получайте комиссионные</div>
-                <p class="card-item__text">
-                  Зарабатывайте на всех фьючерсных и
-                  финансовых операциях пользователей
-                  независимо от исхода сделки.
-                </p>
               </div>
+              <p class="card-item__text">
+                Зарабатывайте на всех фьючерсных и
+                финансовых операциях пользователей
+                независимо от исхода сделки.
+              </p>
             </div>
           </div>
           <div class="make-money__inner-img">
@@ -383,31 +383,31 @@
               для групп трейдеров
             </h4>
             <div class="card-item">
-              <div class="card-item__box-img">
-                <img src="images/icons/add-group.svg" alt="image">
-              </div>
               <div class="card-item__content-wrapper">
+                <div class="card-item__box-img">
+                  <img src="images/icons/add-group.svg" alt="image">
+                </div>
                 <div class="card-item__title">Наберите группу трейдеров</div>
-                <p class="card-item__text">
-                  Сформируйте группу участников
-                  с высокими
-                  инвестициями и заключайте сделки на платформе,
-                  используя сигналы опытных игроков рынка.
-                </p>
               </div>
+              <p class="card-item__text">
+                Сформируйте группу участников
+                с высокими
+                инвестициями и заключайте сделки на платформе,
+                используя сигналы опытных игроков рынка.
+              </p>
             </div>
             <div class="card-item">
-              <div class="card-item__box-img">
-                <img src="images/icons/percentage.svg" alt="image">
-              </div>
               <div class="card-item__content-wrapper">
+                <div class="card-item__box-img">
+                  <img src="images/icons/percentage.svg" alt="image">
+                </div>
                 <div class="card-item__title">Получайте % со сделок</div>
-                <p class="card-item__text">
-                  Клиенты будут выплачивать вам процент от всех
-                  проведенных операций. Размер комиссионных
-                  вы устанавливаете самостоятельно.
-                </p>
               </div>
+              <p class="card-item__text">
+                Клиенты будут выплачивать вам процент от всех
+                проведенных операций. Размер комиссионных
+                вы устанавливаете самостоятельно.
+              </p>
             </div>
           </div>
         </div>
@@ -512,7 +512,7 @@
           </span>для проведения сделок на Forex
         </h2>
         <div class="accent-item__subtitle">
-          и зарабатывайте на каждой сделке пользователей
+          И зарабатывайте на каждой сделке пользователей
         </div>
         <div class="accent-item__btn btn">Оставить заявку на покупку</div>
       </div>
@@ -538,9 +538,12 @@
             <p class="developers__inner-text">
               Мы сами торгуем на Forex уже более 5 лет, и за это время приобрели уникальные знания и
               навыки в данной сфере. Нам удалось профессионально воплотить их в жизнь в платформе
-              Stark, чтобы сделать торговлю для пользователей максимально комфортной. Теперь вы
+              Stark, чтобы сделать торговлю для пользователей максимально комфортной.
+            <p class="developers__inner-text">
+              Теперь вы
               можете приобрести нашу платформу и зарабатывать на каждой сделке, осуществленной
               пользователями Stark!
+            </p>
             </p>
           </div>
         </div>
@@ -694,7 +697,7 @@
           </span>для торгов на Forex
         </h2>
         <div class="accent-item__subtitle">
-          разработанную с учетом опыта профессиональных трейдеров
+          Разработанную с учетом опыта профессиональных трейдеров
         </div>
         <div class="accent-item__text">
           Ваши клиенты смогут намного проще и эффективнее вести торги
@@ -907,7 +910,7 @@
           </span>для торговли на Forex
         </h2>
         <div class="accent-item__subtitle">
-          и зарабатывайте на каждой проведенной через нее сделке
+          И зарабатывайте на каждой проведенной через нее сделке
         </div>
         <div class="accent-item__btn btn">Оставить заявку на покупку</div>
       </div>
